--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,31 @@
 name: Build APK
-on: [push]
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      - run: npm install
-      - uses: expo/expo-github-action@v8
+          node-version: '18'
+          
+      - name: Setup Expo and EAS
+        uses: expo/expo-github-action@v8
         with:
           expo-version: latest
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
-      - run: eas build --platform android --profile preview --non-interactive --local
-      - uses: actions/upload-artifact@v4
-        with:
-          name: apk
-          path: "*.apk"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build on EAS servers
+        run: eas build --platform android --profile preview --non-interactive
+        
+      - name: Get APK URL
+        run: eas build:list --limit 1 --json
