--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,18 @@ jobs:
         with:
           node-version: '18'
           
+      - name: Setup Expo and EAS
+        uses: expo/expo-github-action@v8
+        with:
+          expo-version: latest
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
       - name: Install dependencies
         run: npm install
-        
-      - name: Install EAS CLI
-        run: npm install -g eas-cli
-        
-      - name: Build on EAS
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+
+      - name: Build on EAS servers
         run: eas build --platform android --profile preview --non-interactive
+        
+      - name: Get APK URL
+        run: eas build:list --limit 1 --json
